# MRPNN

./: .gitignore  CMakeLists.txt  README.md  dataGen.cu  main.cu  test.cu
Imgui/: CMakeLists.txt  imgui.h  imgui_impl_dx12.h  imgui_impl_dx9.h  imgui_stdlib.cpp  imgui_stdlib.h  imgui_widgets.cpp
core/: ACES.cuh  GUI.hpp  NNWeight.cuh  camera.cu  camera.hpp  omp.cpp  omp.hpp  platform.h  radiancePredict.cu  radiancePredict.cuh  render.cuh  renderResources.cu  renderResources.cuh  sample_method.hpp  tensor.cuh  vector.cu  vector.cuh  volume.cu  volume.hpp
tools/: CastWeight.py  Compare.py  Compare2.py  Compress.py  FillTable.py  curand include.rar  table.txt
